@@ -9,6 +9,7 @@ Authors@R: c(person("David", "Carslaw", role = c("aut", "cre"), email =
 ByteCompile: true
 Depends:
     R (>= 2.15.1),
+    maps,
 Imports:
     utils,
     grid,
