@@ -59,14 +59,14 @@ projections are possible through the \code{mapproj}
 package. See\code{?mapproj} for extensive details and information
 on setting other parameters and orientation (see below).}
 
-\item{parameters}{From teh \code{mapproj} package. Optional
+\item{parameters}{From the \code{mapproj} package. Optional
 numeric vector of parameters for use with the projection
 argument. This argument is optional only in the sense that certain
 projections do not require additional parameters. If a projection
 does require additional parameters, these must be given in the
 parameters argument.}
 
-\item{orientation}{From teh \code{mapproj} package. An optional
+\item{orientation}{From the \code{mapproj} package. An optional
 vector c(latitude,longitude,rotation) which describes where the
 "North Pole" should be when computing the projection. Normally
 this is c(90,0), which is appropriate for cylindrical and conic
